--- a/wineshare/src/main/resources/templates/member/memberForm.html
+++ b/wineshare/src/main/resources/templates/member/memberForm.html
@@ -5,9 +5,9 @@
 
 <!-- register css Fiels -->
 <th:block layout:fragment="css">
-<link rel="stylesheet" type="text/css" th:href="@{/wineshare-css/login-form.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/wineshare-css/login-form.css}">
     <style>
-        .fieldError{
+        .fieldError {
             color: #bd2130;
         }
     </style>
@@ -19,23 +19,34 @@
 
 <th:block layout:fragment="script">
     <script th:inline="javascript">
-        $(document).ready(function(){
+        $(document).ready(function () {
+
+
+            // 전화번호 합치기
+            $('.phone-group input').on('input', function () {
+                let phone1 = $('#phoneNum1').val();
+                let phone2 = $('#phoneNum2').val();
+                let phone3 = $('#phoneNum3').val();
+                $('#phoneNumber').val(phone1 + '-' + phone2 + '-' + phone3);
+            });
+
+
             const errorMessage = [[${errorMessage}]];
             console.log("errorMessage ===> " + errorMessage);
-            if(errorMessage != null){
+            if (errorMessage != null) {
                 alert(errorMessage);
             }
         });
 
-        function maskSsn() {
-        const rrnSecondInput = document.getElementById("rrnSecond");
-        const inputLength = rrnSecondInput.value.length;
-
-        // 입력값을 *로 변환
-        if (inputLength > 0) {
-            rrnSecondInput.value = "*".repeat(inputLength);
-        }
-    }
+        //     function maskSsn() {
+        //     const rrnSecondInput = document.getElementById("rrnSecond");
+        //     const inputLength = rrnSecondInput.value.length;
+        //
+        //     // 입력값을 *로 변환
+        //     if (inputLength > 0) {
+        //         rrnSecondInput.value = "*".repeat(inputLength);
+        //     }
+        // }
     </script>
 </th:block>
 
@@ -44,19 +55,34 @@
 
     <div class="account-container">
 
-        <div th:if="${authority.equals('admin')}">
-        <h1 class="account-header">Create Admin Account</h1>
+        <div th:if="${memberDTO.id == null}">
+
+            <div th:if="${authority.equals('admin')}">
+                <h1 class="account-header">Create Admin Account</h1>
+            </div>
+
+            <div th:unless="${authority.equals('admin')}">
+                <h1 class="account-header">Create Account</h1>
+            </div>
+
         </div>
 
-        <div th:unless="${authority.equals('admin')}">
-            <h1 class="account-header">Create Account</h1>
-        </div>
+        <div th:unless="${memberDTO.id ==null}">
 
+            <div th:if="${authority.equals('admin')}">
+                <h1 class="account-header">Modify Admin Account</h1>
+            </div>
+
+            <div th:unless="${authority.equals('admin')}">
+                <h1 class="account-header">Modify Account</h1>
+            </div>
+
+        </div>
 
 
         <!-- 타임리프를 사용한 회원가입 폼 -->
         <form action="/members/new" role="form" method="post" class="login-form"
-            th:object="${memberDTO}">
+              th:object="${memberDTO}">
 
             <!-- 이메일 입력 -->
             <div class="form-group">
@@ -67,10 +93,22 @@
 
             <!-- 비밀번호 입력 -->
             <div class="form-group">
-                <label th:for="password">비밀번호</label>
-                <input th:field="*{password}" type="password" placeholder="password" required/>
-                <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="fieldError">Incorrect data</p>
+
+                <div th:if="${memberDTO.id == null}">
+
+                    <label th:for="password">비밀번호</label>
+                    <input th:field="*{password}" type="password" placeholder="password" required/>
+                    <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="fieldError">Incorrect
+                        data</p>
+                </div>
+
+                <div th:unless="${memberDTO == null}">
+                    <label th:for="password">비밀번호 변경</label>
+                    <input type="password" th:field="*{password}" placeholder="password">
+                </div>
+
             </div>
+
 
             <!-- 이름 입력 -->
             <div class="form-group">
@@ -83,35 +121,57 @@
             <div class="form-group">
                 <label th:for="nickname">닉네임</label>
                 <input th:field="*{nickname}" type="text" placeholder="Enter your nickname" required/>
-                <p th:if="${#fields.hasErrors('nickname')}" th:errors="*{nickname}" class="fieldError">Incorrect data</p>
+                <p th:if="${#fields.hasErrors('nickname')}" th:errors="*{nickname}" class="fieldError">Incorrect
+                    data</p>
             </div>
 
             <!-- 주민등록번호 입력 -->
             <div class="form-group">
+
                 <label th:for="RRN">주민등록번호</label>
-                <div class="rrn-group">
-                <input th:field="*{RRN}" type="text" placeholder="6자리를 입력해주세요" maxlength="6" required/>
-                <span style="margin: 0 15px;">_</span>
-                <input id="rrnSecond" th:field="*{RRN}" type="text" placeholder="7자리를 입력해주세요" maxlength="7" required oninput="maskSsn()"/>
+                <input type="text" th:field="*{RRN}" placeholder="000000-0000000">
                 <p th:if="${#fields.hasErrors('RRN')}" th:errors="*{RRN}" class="fieldError">Incorrect data</p>
-                </div>
+
+                <!--                미안해 수림아 나중에 쓸게 -->
+                <!--                <label th:for="RRN">주민등록번호</label>-->
+                <!--                <div class="rrn-group">-->
+                <!--                <input th:field="*{RRN}" type="text" placeholder="6자리를 입력해주세요" maxlength="6" required/>-->
+                <!--                <span style="margin: 0 15px;">_</span>-->
+                <!--                <input id="rrnSecond" th:field="*{RRN}" type="text" placeholder="7자리를 입력해주세요" maxlength="7" required oninput="maskSsn()"/>-->
+                <!--                <p th:if="${#fields.hasErrors('RRN')}" th:errors="*{RRN}" class="fieldError">Incorrect data</p>-->
+                <!--                </div>-->
             </div>
 
             <!-- 전화번호 입력 -->
-            <div class="form-group-phone">
+            <div class="form-group-phone" th:if="${memberDTO.id == null}">
                 <label th:for="phoneNumber">전화번호</label>
                 <div class="phone-group">
-                <input th:field="*{phoneNumber}" type="text" placeholder="010" maxlength="3" required/>
-                <span style="margin: 0 7px;">_</span>
-                <input th:field="*{phoneNumber}" type="text" placeholder="0000" maxlength="4" required/>
-                <span style="margin: 0 7px;">_</span>
-                <input th:field="*{phoneNumber}" type="text" placeholder="0000" maxlength="4" required/>
-                <p th:if="${#fields.hasErrors('phoneNumber')}" th:errors="*{phoneNumber}" class="fieldError">Incorrect data</p>
+                    <input id="phoneNum1" name="phoneNum1" type="text" placeholder="010" maxlength="3" required/>
+                    <span style="margin: 0 7px;">_</span>
+                    <input id="phoneNum2" name="phoneNum2" type="text" placeholder="0000" maxlength="4" required/>
+                    <span style="margin: 0 7px;">_</span>
+                    <input id="phoneNum3" name="phoneNum3" type="text" placeholder="0000" maxlength="4" required/>
+                    <input type="hidden" th:field="*{phoneNumber}">
+                    <p th:if="${#fields.hasErrors('phoneNumber')}" th:errors="*{phoneNumber}" class="fieldError">
+                        Incorrect data</p>
                 </div>
             </div>
 
-            <!-- 등록 버튼 -->
-            <button type="submit" class="login-button">Register</button>
+            <div th:unless="${memberDTO.id == null}">
+                <label th:for="phoneNumber">전화번호</label>
+                <input type="tel" th:field="*{phoneNumber}" placeholder="전화번호를 입력해주세요.">
+            </div>
+
+            <div th:if="${memberDTO.id == null}">
+                <!-- 등록 버튼 -->
+                <button type="submit" class="login-button">Register</button>
+            </div>
+
+            <div th:unless="${memberDTO.id == null}">
+                <button type="submit" class="login-button">Modify</button>
+                <button type="reset" class="login-button">reset</button>
+            </div>
+
 
             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
         </form>
