--- a/wineshare/src/main/resources/templates/home1.html
+++ b/wineshare/src/main/resources/templates/home1.html
@@ -198,7 +198,7 @@
                             <li class="product-item">
                                 <div class="product-thumb clearfix">
                                     <a href="#" class="product-thumb">
-                                        <img th:src="@{/wineshare-img/surim.gif}" alt="image">
+                                        <img th:src="@{/wineshare-img/surim2.gif}" alt="image">
                                     </a>
                                 </div>
                                 <div class="product-info text-center clearfix">
@@ -253,7 +253,7 @@
                             <li class="product-item">
                                 <div class="product-thumb clearfix">
                                     <a href="#" class="product-thumb">
-                                        <img th:src="@{/wineshare-img/surim.gif}" alt="image">
+                                        <img th:src="@{/wineshare-img/surim2.gif}" alt="image">
                                     </a>
 
                                 </div>
@@ -326,7 +326,7 @@
                             </div>
                             <article class="post-border post-top">
                                 <div class="featured-post">
-                                    <img th:src="@{/image/homepage28.png}" alt="image">
+                                    <img th:src="@{/wineshare-img/surim2.gif}" alt="image">
                                 </div>
                                 <div class="content-post">
                                     <div class="post-title">
@@ -346,7 +346,7 @@
                             </article>
                             <article class="post-border post-between">
                                 <div class="featured-post">
-                                    <img th:src="@{/image/homepage29.png}" alt="image">
+                                    <img th:src="@{/wineshare-img/surim.gif}" alt="image">
                                 </div>
                                 <div class="content-post">
                                     <div class="post-title">
@@ -366,7 +366,7 @@
                             </article>
                             <article class="post-border post-between">
                                 <div class="featured-post">
-                                    <img th:src="@{/image/homepage30.png}" alt="image">
+                                    <img th:src="@{/wineshare-img/surim2.gif}" alt="image">
                                 </div>
                                 <div class="content-post">
                                     <div class="post-title">
@@ -396,7 +396,7 @@
                             </div>
                             <article class="post-border post-top">
                                 <div class="featured-post">
-                                    <img th:src="@{/image/homepage31.png}" alt="image">
+                                    <img th:src="@{/wineshare-img/surim2.gif}" alt="image">
                                 </div>
                                 <div class="content-post">
                                     <div class="post-title">
@@ -416,7 +416,7 @@
                             </article>
                             <article class="post-border post-between">
                                 <div class="featured-post">
-                                    <img th:src="@{/image/homepage32.png}" alt="image">
+                                    <img th:src="@{/wineshare-img/surim.gif}" alt="image">
                                 </div>
                                 <div class="content-post">
                                     <div class="post-title">
@@ -436,7 +436,7 @@
                             </article>
                             <article class="post-border post-between">
                                 <div class="featured-post">
-                                    <img th:src="@{/image/homepage33.png}" alt="image">
+                                    <img th:src="@{/wineshare-img/surim2.gif}" alt="image">
                                 </div>
                                 <div class="content-post">
                                     <div class="post-title">
@@ -466,7 +466,7 @@
                             </div>
                             <article class="post-border post-top">
                                 <div class="featured-post">
-                                    <img th:src="@{/image/homepage34.png}" alt="image">
+                                    <img th:src="@{/wineshare-img/surim2.gif}" alt="image">
                                 </div>
                                 <div class="content-post">
                                     <div class="post-title">
@@ -486,7 +486,7 @@
                             </article>
                             <article class="post-border post-between">
                                 <div class="featured-post">
-                                    <img th:src="@{/image/homepage35.png}" alt="image">
+                                    <img th:src="@{/wineshare-img/surim.gif}" alt="image">
                                 </div>
                                 <div class="content-post">
                                     <div class="post-title">
@@ -506,7 +506,7 @@
                             </article>
                             <article class="post-border post-between">
                                 <div class="featured-post">
-                                    <img th:src="@{/image/homepage36.png}" alt="image">
+                                    <img th:src="@{/wineshare-img/surim2.gif}" alt="image">
                                 </div>
                                 <div class="content-post">
                                     <div class="post-title">
