--- a/wineshare/src/main/resources/templates/fragments/header.html
+++ b/wineshare/src/main/resources/templates/fragments/header.html
@@ -47,9 +47,9 @@
               <li class="active">
                 <a href="about.html" title="">Marketing</a>
                 <ul class="sub-menu">
-                  <li><a th:href="@{marketings/winebar/list}" title="">Wine Bar</a></li>
-                  <li><a th:href="@{marketings/bottleshop/list}" title="">Bottle Shop</a></li>
-                  <li><a th:href="@{marketings/bistro/list}" title="">Bistro</a></li>
+                  <li><a th:href="@{'/marketings/winebar/list'}" title="">Wine Bar</a></li>
+                  <li><a th:href="@{'/marketings/bottleshop/list'}" title="">Bottle Shop</a></li>
+                  <li><a th:href="@{'/marketings/bistro/list'}" title="">Bistro</a></li>
                   <!--                                    <li><a href="404-page.html" title="">Promotion</a></li>-->
                   <!--                                    <li><a href="Wish-list.html" title="">Wish List</a></li>-->
                 </ul><!-- /.sub-menu -->
@@ -57,16 +57,16 @@
               <li class="active">
                 <a href="#" title="">Boards</a>
                 <ul class="sub-menu">
-                  <li><a th:href="@{boards/upgrade/list}" title="">등업게시판</a></li>
-                  <li><a th:href="@{boards/question/list}" title="">질문게시판</a></li>
-                  <li><a th:href="@{boards/request/list}" title="">요청게시판</a></li>
+                  <li><a th:href="@{'/boards/upgrade/list'}" title="">등업게시판</a></li>
+                  <li><a th:href="@{'/boards/question/list'}" title="">질문게시판</a></li>
+                  <li><a th:href="@{'/boards/request/list'}" title="">요청게시판</a></li>
                 </ul><!-- /.sub-menu -->
               </li>
               <li class="active">
                 <a href="#" title="">Events</a>
                 <ul class="sub-menu">
-                  <li><a th:href="@{marketings/list/event}" title="">행사</a></li>
-                  <li><a th:href="@{marketings/list/promotion}" title="">프로모션</a></li>
+                  <li><a th:href="@{'/marketings/list/event'}" title="">행사</a></li>
+                  <li><a th:href="@{'/marketings/list/promotion'}" title="">프로모션</a></li>
                   <!--                                    <li><a href="Blog-Right-Slidebar.html" title="">Blog Right Slidebar</a></li>-->
                   <!--                                    <li><a href="Blog-details-slidebar.html" title="">Blog Details Slidebar</a></li>-->
                   <!--                                    <li><a href="Blog-details-fullwidth.html" title="">Blog Details FullWidth</a></li>-->
@@ -98,18 +98,18 @@
             <li><a href="#"> <i class="ti-align-justify" aria-hidden="true"></i> </a>
               <ul class="sub-menu">
                 <li sec:authorize="isAnonymous()">
-                  <a href="/members/login" title="">Login</a>
+                  <a th:href="@{'/members/login'}" title="">Login</a>
                 </li>
                 <li sec:authorize="isAuthenticated()">
-                  <a href="/members/logout">Logout</a>
+                  <a th:href="@{'/members/logout'}">Logout</a>
                 </li>
                 <li sec:authorize="isAuthenticated()">
-                  <a th:href="@{members/modify}">회원정보수정</a>
+                  <a th:href="@{'/members/modify'}">회원정보수정</a>
                 </li>
-                <li><a href="/cellars" title="">My Cellar</a></li>
-                <li><a href="/wines/new" title="">와인 등록</a></li>
+                <li><a th:href="@{'/cellars'}" title="">My Cellar</a></li>
+                <li><a th:href="@{'/wines/new'}" title="">와인 등록</a></li>
 <!--                <li><a th:href="/marketings/register" title="">업장/행사 등록</a></li>-->
-                <li><a href="#" title="">관리자 데이터 목록</a></li>
+                <li ><a th:href="@{'/admins/dataChoiList'}" title="">관리자 데이터 목록</a></li>
               </ul><!-- /.sub-menu -->
             </li>
           </ul>
